Refactored actionhover plugin. Made first file's actions visible from the start. Fixed tree plugin so that firefox sidebar works properly.
git-svn-id: https://optime.repos.se/svn/code/repos/trunk@3820 94f62164-8fde-0310-83d7-e1105c8c1596

--- a/www/style/global.css
+++ b/www/style/global.css
@@ -38,7 +38,9 @@ h3, thead td {
 	margin-bottom: 3px;
 	font-size: 1.1em;
 	letter-spacing: 0.1em;
-	text-align: center; /* fixed width or table cell */
+}
+thead td {
+	text-align: center;
 }
 h1, h2, h3 {
 	clear:both;
